<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MenuActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        android:contentDescription="@string/imagemenu"
        android:scaleType="centerCrop"
        android:src="@drawable/boleibol" />

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:text="@string/nombre_del_usuario"
        android:textAlignment="center"
        android:textColor="@color/secundary"
        android:textSize="@dimen/_26sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/txtNuevoJuego"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        android:background="@color/success"
        android:text="@string/nuevo_juego"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUltimosJuegos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        android:background="@color/secundary"
        android:text="@string/ver_ultimos_10_juegos"
        android:textColor="@color/white" />


</LinearLayout>