<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15dp"
        android:elevation="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardElevation="@dimen/_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32dp"
                android:text="@string/iniciar_sesion"
                android:textAlignment="center"
                android:textColor="@color/secundary"
                android:textSize="@dimen/_26sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:background="@drawable/input_custom"
                android:hint="@string/hint_usuario" />

            <EditText
                android:id="@+id/txtContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:background="@drawable/input_custom"
                android:hint="@string/hint_contrase_a" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32dp"
                android:layout_marginTop="@dimen/_32dp"
                android:layout_marginEnd="@dimen/_32dp"
                android:layout_marginBottom="@dimen/_32dp"
                android:background="@color/secundary"
                android:text="@string/ingresar"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>