<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.game.TeamPlanningActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_planning"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_26sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/txtNameGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="nameGame"
                android:hint="@string/name_game"
                android:inputType="text" />

            <androidx.constraintlayout.utils.widget.MotionLabel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_team_a"
                android:textAlignment="textStart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtTeamOne"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete"
                    android:labelFor="@+id/txtTeamOne"
                    tools:ignore="LabelFor" />

                <ImageButton
                    android:id="@+id/btnCreateNewTeam"
                    android:layout_width="@dimen/_32dp"
                    android:layout_height="@dimen/_32dp"
                    android:src="@color/cardview_shadow_end_color" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>