<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secundary_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".JuegoActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_200dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardElevation="@dimen/_10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_marginBottom="@dimen/_15dp"
            android:text="@string/set_n_mero_1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_26sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:text="@string/puntos"
        android:textColor="@color/black"
        android:textSize="@dimen/_26sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginBottom="@dimen/_32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_10dp"
            app:cardCornerRadius="@dimen/_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_26sp"
                android:textStyle="bold"
                tools:text="Equipo A = 20" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15dp"
            android:elevation="@dimen/_10dp"
            app:cardCornerRadius="@dimen/_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_26sp"
                android:textStyle="bold"
                tools:text="Equipo B = 24" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:gravity="center"
        android:orientation="horizontal">


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_weight="1"
            android:background="@drawable/input_custom"
            android:backgroundTint="@color/success"
            android:text="@string/_1"
            android:textColor="@color/secundary"
            android:textSize="@dimen/_26sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_marginEnd="@dimen/_15dp"
            android:layout_weight="1"
            android:background="@drawable/input_custom"
            android:backgroundTint="@color/success"
            android:text="@string/_1"
            android:textColor="@color/secundary"
            android:textSize="@dimen/_26sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginTop="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        android:background="@drawable/input_custom"
        android:backgroundTint="@color/secundary"
        android:text="@string/reiniciar_juego"
        android:textColor="@color/white"
        android:textSize="@dimen/_26sp"
        android:textStyle="bold" />
</LinearLayout>